# ankit-notice-notifier

./: .env.sample  .gitignore  Cargo.toml  README.md  govt_college.name  prvt_college.name
src/: main.rs
src/data_collectors/: nmc.rs
src/handlers/: bihar_ugmac.rs  default.rs  mcc_counselling.rs  mod.rs
